# github-trending-claude-wayfinder

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml  renovate.json
.claude-plugin/: plugin.json
docs/: api.md  design.md  dispatch-authoring-guide.md  dispatch-discipline.md  dispatch-overrides.md  integration.md  release-process.md  schema.md
hooks/: _session_pidfile.py  check-agent-dispatch-pairing.js  check-catalog-health.js  hooks.json  log-agent-dispatch.js  log-dispatch-decision.js  log-skill-invocation.js  parse-input.js  refresh-catalog-on-stale.js  router-drift-scanner.js  session-end-cleanup-session.js  session-end-cleanup-session.py  session-start-record-session.js  session-start-record-session.py
scripts/: analyze-drift-causes.py  replay_mixed_content.py  shadow-summary.py
spikes/: __init__.py
tests/: conftest.py  test_analyze_drift_causes.py  test_and_groups_replay.py  test_audit_catalog.py  test_build_catalog.py  test_build_catalog_discover.py  test_build_catalog_main.py  test_build_catalog_process.py  test_build_catalog_validate.py  test_cli_catalog_build.py  test_cli_demo.py  test_cli_dispatch.py  test_cli_dispatch_batch.py  test_cli_format_decision.py  test_cli_health.py  test_dispatch_runtimewarning.py  test_health.py  test_log_filter.py  test_log_isolation.py  test_match_filters.py  test_match_keyword_groups.py  test_platform_agents.py  test_plugin_manifests.py  test_public_api.py  test_setup_pipeline_shlex.py  test_skill_pipeline_sync.py  test_stemming.py  test_trigger_validators.py  test_version.py
(+219 files in other folders)
