[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-wayfinder"
version = "1.2.0"
description = "Helps Claude make deterministic, auditable choices about which agent and skills to use for a given task — replacing prose-scanning agent/skill selection with a typed scoring kernel."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Christopher Beaulieu" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["pyyaml>=6.0", "psutil>=5.9", "snowballstemmer>=2.2"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "pyyaml>=6.0"]
spike = ["model2vec==0.8.2"]

[project.urls]
Homepage = "https://github.com/glitchwerks/claude-wayfinder"
Issues = "https://github.com/glitchwerks/claude-wayfinder/issues"

[project.scripts]
claude-wayfinder = "claude_wayfinder.cli:main"
claude-wayfinder-match = "claude_wayfinder.match:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_wayfinder"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
